--- a/FaceDetectorResource/FaceDetectorResource/project.properties
+++ b/FaceDetectorResource/FaceDetectorResource/project.properties
@@ -11,6 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-15
-android.library.reference.1=../OpenCV Library - 2.4.5
+target=Google Inc.:Google APIs:17
 android.library=true
