--- a/AssitantCam/DMCCam/bin/AndroidManifest.xml
+++ b/AssitantCam/DMCCam/bin/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
-    <permission android:name="com.dmc.camera.provider.permission.READ"
-        android:protectionLevel="signature"/>
-    <permission android:name="com.dmc.camera.provider.permission.WRITE"
-        android:protectionLevel="signature"/>
-    
+
+    <permission
+        android:name="com.dmc.camera.provider.permission.READ"
+        android:protectionLevel="signature" />
+    <permission
+        android:name="com.dmc.camera.provider.permission.WRITE"
+        android:protectionLevel="signature" />
 
     <application
         android:allowBackup="true"
@@ -27,15 +28,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <provider
             android:name="com.dmc.camera.provider.DBProvider"
-            android:authorities="com.dmc.camera.provider" 
+            android:authorities="com.dmc.camera.provider"
             android:readPermission="com.dmc.camera.provider.permission.READ"
-            android:writePermission="com.dmc.camera.provider.permission.WRITE"
-            />
-        
-        <activity android:name="com.dmc.camera.assist.MainActivity" >
+            android:writePermission="com.dmc.camera.provider.permission.WRITE" />
+
+        <activity
+            android:name="com.dmc.camera.assist.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" >
 
             <!-- android:label="@string/app_name" android:screenOrientation="landscape"> -->
             <intent-filter>
