--- a/Grip/AndroidManifest.xml
+++ b/Grip/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <permission
         android:name="com.dmc.grip.provider.permission.WRITE"
         android:protectionLevel="signature" />
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
