--- a/AssitantCam/DMCCam/AndroidManifest.xml
+++ b/AssitantCam/DMCCam/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" ></uses-permission>
 
     <uses-feature android:name="android.hardware.camera" />
 
