[Camera] (1) add photo path (2) add start photoview function (3) back key off.

--- a/AssitantCam/DMCCam/AndroidManifest.xml
+++ b/AssitantCam/DMCCam/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:protectionLevel="signature" />
 
     <application
+        android:name="com.dmc.camera.Global"
         android:allowBackup="true"
         android:debuggable="true"
         android:icon="@drawable/ic_launcher"
